--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  justify-content: left;
+  justify-content: center;
 }
 
 .skill-item, .tool-item {
