--- a/style.css
+++ b/style.css
@@ -335,8 +335,9 @@ input, textarea, select {
       font-weight: bold;
       font-size: 1.2rem;
       color: white;
-      text-decoration: wavy underline;
-      text-decoration-color: var(--accent);
+      text-decoration-line: underline;
+      text-decoration-style: wavy;
+      text-decoration-color: var(--accent)
     }
 
     .timeline-item .content {
